# lanelayer-analytics

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  fly.toml  requirements.txt
.github/workflows/: build-and-push.yml  deploy.yml  health-check.yml  prompt-tests.yml
app/: config.py  database.py  main.py
app/models/: events.py  prompts.py  sessions.py
app/routers/: docs.py  events.py  prompts.py  sessions.py
app/services/: slack.py
app/utils/: id_generator.py
prompt-tests/: run_codex_sim.py  run_cursor_sim.py
prompt-tests/fixtures/: lane_help.txt
prompt-tests/scenarios/: basic.json
samples/python/: .dockerignore  Dockerfile  app.py  package.json
scripts/: Dockerfile.ubuntu-test  default-prompt.txt  developer-workflow.txt  github-flow.txt  interview-guide.txt  seed-prompt.sh  simulate_lane_with_codex.sh  simulate_lane_with_cursor.sh  test_docker_ubuntu.sh  test_local_macos.sh  test_manual.sh
src/: config.rs  db.rs  email.rs  main.rs  models.rs  slack.rs  utils.rs
src/handlers/: auth.rs  bizcard.rs  docs.rs  events.rs  mod.rs  prompts.rs  sample.rs  sessions.rs
tests/: conftest.py  test_events.py  test_prompts.py  test_sessions.py
